# egide

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  clippy.toml  deny.toml  lefthook.yml  release.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: bump.yml  ci.yml  docker.yml  release.yml
config/: egide.example.toml
deploy/docker/: docker-compose.dev.yml  docker-compose.yml
docs/: MSRV_POLICY.md  README.md  RELEASE_PROCESS.md  SEMVER_POLICY.md
docs/adr/: 0001-relicense-from-bsl-to-mit-or-apache-2.0.md  README.md
docs/api/: kms.md  overview.md  pki.md  secrets.md  system.md  transit.md
docs/architecture/: kms-engine.md  overview.md  pki-engine.md  secrets-engine.md  storage.md  transit-engine.md
docs/concepts/: architecture.md  authentication.md  kms-engine.md  pki-engine.md  secrets-engine.md  transit-engine.md
docs/deployment/: binary.md  docker-compose.md  docker.md  kubernetes.md  overview.md  production-checklist.md
docs/explanation/: index.md  roadmap.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: backup.md  docker.md  high-availability.md  production.md
docs/how-to/: index.md
docs/reference/: index.md
docs/security/: compliance.md  model.md
docs/tutorials/: index.md
scripts/: release.sh
src/cli/egide-cli/: Cargo.toml  README.md
src/cli/egide-cli/src/: main.rs
src/core/egide-crypto/: Cargo.toml  README.md
src/core/egide-crypto/src/: aead.rs  error.rs  kdf.rs  keys.rs  lib.rs  mac.rs  random.rs
src/core/egide-kms/: Cargo.toml  README.md
src/core/egide-kms/src/: error.rs  lib.rs
src/core/egide-pki/: Cargo.toml  README.md
src/core/egide-pki/src/: error.rs  lib.rs
src/core/egide-seal/: Cargo.toml  README.md
src/core/egide-seal/src/: error.rs  lib.rs
src/core/egide-secrets/: Cargo.toml  README.md
src/core/egide-secrets/src/: error.rs  lib.rs
src/core/egide-transit/: Cargo.toml  README.md
src/core/egide-transit/src/: error.rs  lib.rs
src/egide/: Cargo.toml  README.md
src/egide/src/: lib.rs
src/server/egide-api/: Cargo.toml  build.rs
src/server/egide-api/proto/egide/v1/: auth.proto  secrets.proto  sys.proto  transit.proto
src/server/egide-api/src/: context.rs  error.rs  lib.rs  secrets.rs  service_tokens.rs  sys.rs  test_support.rs  transit.rs
src/server/egide-auth/: Cargo.toml
src/server/egide-auth/src/: backend.rs  context.rs  error.rs  lib.rs  nubster_identity.rs  root_token.rs  service.rs  service_token.rs
src/server/egide-server/: Cargo.toml
src/server/egide-server/src/: lib.rs  main.rs  problem.rs  transit.rs
src/server/egide-server/src/grpc/: auth.rs  mod.rs  secrets.rs  service_tokens.rs  status_map.rs  sys.rs  tests_support.rs  transit.rs
src/server/egide-server/tests/: grpc_parity.rs  service_tokens.rs  transit.rs
src/storage/egide-storage/: Cargo.toml  README.md
src/storage/egide-storage-postgres/: Cargo.toml  README.md
src/storage/egide-storage-postgres/src/: lib.rs
src/storage/egide-storage-sqlite/: Cargo.toml  README.md
src/storage/egide-storage-sqlite/src/: lib.rs
src/storage/egide-storage/src/: backend.rs  error.rs  lib.rs  pattern.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
