[workspace]
resolver = "2"

members = [
    # Core engines
    "src/core/egide-crypto",
    "src/core/egide-seal",
    "src/core/egide-secrets",
    "src/core/egide-kms",
    "src/core/egide-pki",
    "src/core/egide-transit",

    # Server
    "src/server/egide-server",
    "src/server/egide-api",
    "src/server/egide-auth",

    # Storage backends
    "src/storage/egide-storage",
    "src/storage/egide-storage-postgres",
    "src/storage/egide-storage-sqlite",

    # CLI
    "src/cli/egide-cli",

    # Facade
    "src/egide",

    # Integration tests
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Nubster <contact@nubster.com>"]
repository = "https://github.com/nubster-opensources/egide"
homepage = "https://egide.nubster.com"
documentation = "https://egide.nubster.com/docs"
keywords = ["secrets", "vault", "kms", "pki", "encryption"]
categories = ["cryptography", "authentication"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Cryptography
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
blahaj = "0.6"
argon2 = "0.5"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["trace", "cors"] }

# gRPC
tonic = "0.14.6"
prost = "0.14"
tonic-health = "0.14.6"
tonic-reflection = "0.14.6"
tonic-build = "0.14.6"
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
