[package]
name = "egide-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio = { workspace = true, features = ["full", "process"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.10"
