[package]
name = "egide-cli"
description = "Egide CLI - Command line interface"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "egide"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
