[package]
name = "egide-kms"
description = "KMS Engine for Egide - Key management and encryption operations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
egide-crypto = { path = "../egide-crypto" }
egide-storage = { path = "../../storage/egide-storage" }

thiserror.workspace = true
