[package]
name = "egide-pki"
description = "PKI Engine for Egide - Certificate Authority and certificate management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
egide-crypto = { path = "../egide-crypto" }
egide-storage = { path = "../../storage/egide-storage" }

thiserror.workspace = true
