[package]
name = "egide-pki"
description = "PKI Engine for Egide - Certificate Authority and certificate management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
egide-crypto = { path = "../egide-crypto", version = "0.1.0" }
egide-storage = { path = "../../storage/egide-storage", version = "0.1.0" }

thiserror.workspace = true
