[package]
name = "egide-seal"
description = "Seal/Unseal mechanism for Egide vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
egide-crypto = { path = "../egide-crypto" }
egide-storage = { path = "../../storage/egide-storage" }
egide-storage-sqlite = { path = "../../storage/egide-storage-sqlite" }

async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
sharks.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.14"
