[package]
name = "egide-seal"
description = "Seal/Unseal mechanism for Egide vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
egide-crypto = { path = "../egide-crypto", version = "0.1.0" }
egide-storage = { path = "../../storage/egide-storage", version = "0.1.0" }
egide-storage-sqlite = { path = "../../storage/egide-storage-sqlite", version = "0.1.0" }

async-trait.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
blahaj.workspace = true
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
subtle.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.14"
