[package]
name = "egide-auth"
description = "Egide authentication - Token, AppRole, OIDC, mTLS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
egide-crypto = { path = "../../core/egide-crypto" }
egide-storage = { path = "../../storage/egide-storage" }

thiserror.workspace = true
