[package]
name = "egide-auth"
description = "Egide authentication - root-token and native service-token backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
egide-crypto = { path = "../../core/egide-crypto" }
egide-storage = { path = "../../storage/egide-storage" }

# Async
tokio = { workspace = true }
async-trait = "0.1"

# Observability
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Crypto (for root token validation with Argon2)
argon2 = "0.5"
sha2 = { workspace = true }
hex = "0.4"
subtle = "2.6"
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
