[package]
name = "egide-storage-postgres"
description = "PostgreSQL storage backend for Egide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
egide-storage = { path = "../egide-storage", version = "0.1.0" }

async-trait.workspace = true
thiserror.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
