[package]
name = "egide-storage"
description = "Storage abstraction layer for Egide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
